# cs-insights-crawler

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.bib  Dockerfile  LICENSE  README.md  docker-compose.yml  empty.env  grobid.yaml  grobid_config.json  main.py  missing_papers.txt  mypy.ini  pylintrc  pyproject.toml  requirements.txt  run_slurm.sh
.devcontainer/: devcontainer.json
.github/: issue-branch.yml
.github/ISSUE_TEMPLATE/: bug_report.md  epic-template.md
.github/workflows/: branch.yaml  codeql-analysis.yml  main.yml  release.yaml  release.yml  tests.yml
NLP-Scholar-Data-vJune2020/: README
csinsights/: cli.py  config.py  process.py  s2orc.py  scrapy.cfg  types.py
csinsights/client/: __init__.py  dblpclient.py  s2client.py  zenodo.py
csinsights/crawler/: items.py  middlewares.py  pipelines.py  settings.py
csinsights/crawler/spiders/: dblp.py
csinsights/data/: __init__.py  s2processor.py
csinsights/grobid2json/: process_pdf.py  tei_to_json.py
csinsights/grobid2json/grobid/: client.py  grobid_client.py
csinsights/log/: __init__.py  logger.py
csinsights/utils/: citation_util.py  grobid_util.py  refspan_util.py
nlpland/: MAIN.md  __init__.py  clean.py  cli.py  constants.py  data_analysis.py  data_check.py  data_cleanup.py  dataset.py  filter.py  main.py  scatter.py  semantic.py  topic_modelling.py  types.py  wordcount.py
nlpland/backend/: BACKEND.md  __init__.py
nlpland/client/: CLIENT.md  __init__.py  genericclient.py
nlpland/client/backend/: BACKEND.md  __init__.py  backendclient.py  schemas.py
nlpland/client/dblp/: DBLP.md  __init__.py  dblpclient.py
nlpland/client/generic/: __init__.py  genericclient.py
nlpland/client/grobid/: __init__.py  grobidclient.py
nlpland/crawl/: __init__.py  documentcrawler.py
nlpland/data/: check.py  clean.py  dataset.py  filter.py
nlpland/dblp/: DBLP.md  DBLPClient.py  download.py
nlpland/log/: LOGGER.md  __init__.py  logger.py
nlpland/modules/: count.py  database.py  enums.py  models.py  scatter.py  semantic.py  topic_model.py
nlpland/process/: PROCESS.md  __init__.py  continous.py
nlpland/transform/: __init__.py  transform.py
tests/: test_check.py  test_clean.py  test_cli.py  test_dataset.py  test_filter.py
