[tool.poetry]
name = "NLPLand"
version = "v0.2.1"
description = "This repository implements the interaction with DBLP, information extraction and pre-processing of papers, and a client to store data to the NLP-Land-backend."
authors = ["Jan Philip Wahle <wahle@uni-wuppertal.de>", "Lennart Kuell <lennart.kuell@gmail.com>", "Terry Ruas <ruas@uni-wuppertal.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = "^8.0.3"
tqdm = "^4.62.3"
lxml = "^4.6.4"
appdirs = "^1.4.4"
beautifulsoup4 = "^4.10.0"
xmltodict = "^0.12.0"
aiohttp = "3.0.0"
aiofiles = "^0.7.0"
requests = "^2.26.0"
GitPython = "^3.1.24"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
black = "^21.9b0"
isort = "^5.9.3"
pytest-mock = "^3.6.1"
flake8 = "^4.0.1"
flake8-black = "^0.2.3"
flake8-isort = "^4.1.1"
flake8-annotations = "^2.7.0"
flake8-docstrings = "^1.6.0"
pdoc3 = "^0.10.0"
poethepoet = "^0.11.0"
pre-commit = "^2.15.0"
mypy = "^0.910"
types-requests = "^2.26.0"
lxml-stubs = "^0.3.0"
types-appdirs = "^1.4.1"
types-beautifulsoup4 = "^4.10.5"
types-click = "^7.1.8"

[tool.poetry.scripts]
cli = "nlpland.cli:cli"

[tool.poe.tasks]
lint = "flake8 ."
type = "mypy ."
test = "py.test tests -s --cov=nlpland --cov-report=xml --cov-fail-under 100"
doc = "pdoc --output-dir docs --html nlpland"
alltest = ["lint", "type", "test"]
isort = "isort ."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[package]
include = ["nlpland/*.py"]
